force-app/main/default/objects/gslib_Log__e/fields/Context_User__c.field-meta.xml
<CustomField>
    <fullName>Context_User__c</fullName>
    <label>Context User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>