force-app/main/default/objects/gslib_Log__e/fields/Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Exception_Message__c</fullName>
    <description>The exception message</description>
    <label>Exception Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>