force-app/main/default/objects/gslib_Log__e/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>The logged exception type.</description>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>