force-app/main/default/objects/gslib_Log__e/fields/LogLevel__c.field-meta.xml
<CustomField>
    <fullName>LogLevel__c</fullName>
    <label>Log Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>