force-app/main/default/objects/gslib_Log__e/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>