force-app/main/default/objects/gslib_Log__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>The log timestamp.</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>